# wtransport-example

./: .gitignore  Dockerfile  httproute.yaml  package-lock.json  package.json  svelte.config.js  vite.config.ts
axum-server/: Cargo.toml  Dockerfile
axum-server/src/: main.rs
k8s/: axum-server.yaml  base.yaml  cert.yaml  gateway.yaml  kustomization.yaml  routes.yaml  tls.yaml  wtransport.yaml
k8s/patches/dev/: base.yaml  kustomization.yaml  routes.yaml  wtransfer.yaml  wtransport.yaml
server/: Cargo.toml  Dockerfile
server/assets/: index.html
server/assets/_app/: version.json
server/assets/_app/immutable/assets/: 2.B7I8Wo4B.css
server/assets/_app/immutable/chunks/: 9b6y2DF-.js  AuamoWko.js  Bppcl8Q6.js  CNcxYGcq.js  CRbPLMmM.js  DT-EGgzH.js  z6wWdzwA.js
server/assets/_app/immutable/entry/: app.BmVIztYr.js  start.Bw3fx9wX.js
server/assets/_app/immutable/nodes/: 0.NvVayppn.js  1.BXvkKDj5.js  2.e9HmYwuv.js
server/src/: main.rs
src/routes/: +page.svelte
